tests/any_collapse_is/error.txt
Validation error: ./tests/any_collapse_is/any_collapse_is.fae, line 3: No symbol `unknown_function` in the current scope
  3|     if unknown_function() is index: Some {
            ^^^^^^^^^^^^^^^^
